# progetto_acp

./: Installhimod.sh  Installhimoddebug.sh  README.md  SparseProgram.cpp  archive.tgz  clvect.cpp  clvect.h  file1.csv  full_OK  full_OK.cpp  input.cpp  input.h  matrix.cpp  move.h  old_program1.cpp  output.cpp  program1.cpp  searchfunction.h  sparse.cpp  sparse_OUTPUT_NOT_OK.cpp  struct.h  timing.cpp
Downloads/: matrix.cpp
backup/openMP/: main_ompfull.cpp  main_ompst.cpp  struct_matrix.h
backup/sequential/: .gitignore  CMakeLists.txt  input.h  run.sh  struct_sparseNNVA.h  vect.h
openMP/: CMakeLists.txt  main_ompst  makefile.sh  struct_sparse.h  vect.h
project/: 1.csv  alloc.h  main_full.cpp  main_st  main_st.cpp  memory.cpp  move_matrix.cpp  move_matrix.h  move_sparse.h  output_matrix.cpp  output_matrix.h  output_sparse.h  problem.csv  struct_sparse.h  vect.h
project/C_main/: full_OK.cpp  input.h  sparse_OK.cpp
project/full/: 1.csv  100.csv  5.csv  main_full.cpp  problemino.csv  struct_matrixBIS.h
project/main_st/: 1.csv  100.csv  1000.csv  10000.csv  1000x1000sparse60.csv  5.csv  alloc.h  main_st  main_st.cpp  move_sparse.h  struct_sparse.h  vectBinarySearch.h
project/sequential/: .gitignore  .gitignore.swp  1.csv  10.csv  100.csv  1000.csv  5.csv  CMakeLists.txt  alloc.h  archive.tgz  build.sh  callgrind.out.1689  changes_to_be_compiled.sh  input.h  main_full  main_full.cpp  main_st  main_st.cpp  problem.csv  script.sh  struct_matrix.h  vect.h  (+1 more)
sequential/: alloc.h  build.sh  main_full.cpp  main_st.cpp  makefile.sh  struct_matrix.h  struct_sparse.h
